--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,7 @@
                 <artifactId>license-maven-plugin</artifactId>
                 <configuration>
                     <excludes>
+                        <exclude>**/**/*.svg</exclude>
                         <exclude>**/**/*.html</exclude>
                     </excludes>
                 </configuration>
