--- a/pom.xml
+++ b/pom.xml
@@ -102,8 +102,9 @@
                    <artifactItems>
                      <artifactItem>
                        <groupId>org.eclipse.che.docs</groupId>
-                       <artifactId>che-docs-src</artifactId>
+                       <artifactId>che-docs</artifactId>
                        <version>5.0.0-SNAPSHOT</version>
+                       <classifier>sources</classifier>
                        <type>jar</type>
                        <overWrite>false</overWrite>
                        <outputDirectory>${project.build.directory}/codenvy-docs-src</outputDirectory>
