Remove subfolder docs from war file.

--- a/pom.xml
+++ b/pom.xml
@@ -174,12 +174,9 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                     <webResources>
                         <resource>
-                            <directory>target/_site</directory>
+                            <directory>target/_site/docs</directory>
                         </resource>
                     </webResources>
-                    <packagingExcludes>
-                      *.xml
-                    </packagingExcludes>
                 </configuration>
             </plugin>
         </plugins>
