--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <tag>HEAD</tag>
     </scm>
     <properties>
+        <che.docs.version>5.0.0-SNAPSHOT</che.docs.version>
         <jetty.version>9.4.0.v20161208</jetty.version>
         <maven.releases.repo.url>https://maven.codenvycorp.com/content/repositories/codenvy-private-releases/</maven.releases.repo.url>
         <maven.snapshots.repo.url>https://maven.codenvycorp.com/content/repositories/codenvy-private-snapshots/</maven.snapshots.repo.url>
@@ -46,7 +47,7 @@
             <dependency>
                 <groupId>org.eclipse.che.docs</groupId>
                 <artifactId>che-docs</artifactId>
-                <version>5.0.0-SNAPSHOT</version>
+                <version>${che.docs.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
