Fixed awesome fonts, updated per changes to che-docs that broke build, remove home page, /docs/index.html is now intro, removed assembly/build_war.yml which is not needed, added image border, and changed inline code style.

--- a/src/main/_data/docs.yml
+++ b/src/main/_data/docs.yml
@@ -1,5 +1,5 @@
 #
-#  2012-2016 Codenvy, S.A.
+#  2012-2017 Codenvy, S.A.
 #  All Rights Reserved.
 #
 # NOTICE:  All information contained herein is, and remains
@@ -15,7 +15,7 @@
 
 - title: Getting Started
   docs:
-  - start-introduction
+  - intro
   - start-getting-started
   - ws-admin-intro # Che workspace-administration
   - ws-stacks # Che workspace-administration
