--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-     2012-2016 Codenvy, S.A.
+     2012-2017 Codenvy, S.A.
      All Rights Reserved.
 
     NOTICE:  All information contained herein is, and remains
@@ -96,6 +96,13 @@
                 </configuration>            
               </execution>
             </executions>
+            <dependencies>
+              <dependency>
+                <groupId>org.apache.maven.shared</groupId>
+                <artifactId>maven-filtering</artifactId>
+                <version>1.3</version>
+              </dependency>
+            </dependencies>
           </plugin>
             <plugin>
              <groupId>org.apache.maven.plugins</groupId>
