--- a/src/main/_config.yml
+++ b/src/main/_config.yml
@@ -1,5 +1,5 @@
 #
-#  2012-2016 Codenvy, S.A.
+#  2012-2017 Codenvy, S.A.
 #  All Rights Reserved.
 #
 # NOTICE:  All information contained herein is, and remains
@@ -22,7 +22,7 @@ kramdown:
   smart_quotes:   lsquo,rsquo,ldquo,rdquo
   input:          GFM
 
-repository: https://github.com/codenvy/codenvy
+repository: https://github.com/codenvy/codenvy/
 
 timezone: America/Los_Angeles
 
@@ -64,6 +64,8 @@ exclude:
   - _docs/che/chedir-portable-workspaces
   - _docs/che/che-data-model
   - _docs/che/artik-ide-plugin
+  - _docs/che/assets
+  - _docs/che/intro.md
   
 # The following are used to define markdown permalinks
 defaults:
