--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
                 </configuration>            
               </execution>
             </executions>
+            <dependencies>
+              <dependency>
+                <groupId>org.apache.maven.shared</groupId>
+                <artifactId>maven-filtering</artifactId>
+                <version>1.3</version>
+              </dependency>
+            </dependencies>
           </plugin>
             <plugin>
              <groupId>org.apache.maven.plugins</groupId>
