--- a/pom.xml
+++ b/pom.xml
@@ -91,19 +91,12 @@
                   <resources>          
                     <resource>
                       <directory>${project.basedir}/src/main</directory>
-                      <filtering>true</filtering>
+                      <filtering>false</filtering>
                     </resource>
                   </resources>              
                 </configuration>            
               </execution>
             </executions>
-            <dependencies>
-              <dependency>
-                <groupId>org.apache.maven.shared</groupId>
-                <artifactId>maven-filtering</artifactId>
-                <version>1.3</version>
-              </dependency>
-            </dependencies>
           </plugin>
             <plugin>
              <groupId>org.apache.maven.plugins</groupId>
@@ -136,6 +129,7 @@
                 <artifactId>license-maven-plugin</artifactId>
                 <configuration>
                     <excludes>
+                        <exclude>**/**/*.js</exclude>
                         <exclude>**/**/*.svg</exclude>
                         <exclude>**/**/*.html</exclude>
                     </excludes>
