--- a/src/main/_data/env.yml
+++ b/src/main/_data/env.yml
@@ -1,3 +1,4 @@
+filename: codenvy.env
 ############################################################
 #####                                                  #####
 #####                  CODENVY SYSTEM                  #####
@@ -272,6 +273,9 @@ MACHINE_WS_AGENT_RUN_COMMAND: CODENVY_MACHINE_WS_AGENT_RUN_COMMAND
 #CODENVY_MACHINE_DOCKER_NETWORK_DRIVER=overlay
 MACHINE_DOCKER_NETWORK_DRIVER: CODENVY_MACHINE_DOCKER_NETWORK_DRIVER
 
+
+DOCKER_REGISTRY__FOR__SNAPSHOTS: CODENVY_DOCKER_REGISTRY__FOR__SNAPSHOTS
+DOCKER_NAMESPACE: CODENVY_DOCKER_NAMESPACE
 # Workspace Snapshots
 #     By default, when a workspace is stopped, we snapshot its state, create a Docker image 
 #     of it, and then save that image in a private Docker registry that is started when
