license in header

--- a/src/main/_data/env.yml
+++ b/src/main/_data/env.yml
@@ -1,3 +1,18 @@
+#
+#  2012-2017 Codenvy, S.A.
+#  All Rights Reserved.
+#
+# NOTICE:  All information contained herein is, and remains
+# the property of Codenvy S.A. and its suppliers,
+# if any.  The intellectual and technical concepts contained
+# herein are proprietary to Codenvy S.A.
+# and its suppliers and may be covered by U.S. and Foreign Patents,
+# patents in process, and are protected by trade secret or copyright law.
+# Dissemination of this information or reproduction of this material
+# is strictly forbidden unless prior written permission is obtained
+# from Codenvy S.A..
+#
+
 filename: codenvy.env
 ############################################################
 #####                                                  #####
@@ -287,6 +302,7 @@ DOCKER_NAMESPACE: CODENVY_DOCKER_NAMESPACE
 #     Artifactor or Docker Enterprise Registry.
 #CODENVY_DOCKER_REGISTRY_FOR_WORKSPACE_SNAPSHOTS=<your_private_registry_url>:<port>
 DOCKER_REGISTRY: CODENVY_DOCKER_REGISTRY_FOR_WORKSPACE_SNAPSHOTS
+REGISTRY_HOST: CHE_REGISTRY_HOST
 #
 #     You can change whether snapshots happen automatically when users stop their workspace.
 #CODENVY_WORKSPACE_AUTO_SNAPSHOT=true
