--- a/src/main/_data/tutorials.yml
+++ b/src/main/_data/tutorials.yml
@@ -24,6 +24,7 @@
   - tutorial-meteor
   - tutorial-wordpress
   - tutorial-php
+  - tutorial-composer
   - tutorial-android
   - tutorial-spring-boot
   - tutorial-rails
