Permissions, Billing and Teams pages (#87)
* Initial commit for setting up the page

* Add page for permissions

* Add team documentation page and images

* Add billing page and images

* title and header tweak

* Rename permissions

* Various fixes on the permissions docs

* tweaks

* Fixes in Teams page

* Fix image styling

* Fixes in permissions

* Fixes for Billing

* Delete team-rename.png

rename img not needed

* restructured team page

* Fixes for displaying tables properly

* typo fix

* Fixes to team page

* Update image formatting

* Update subscriptions page

* typo

* update subscriptions page

* updated permissions

--- a/src/main/_data/docs.yml
+++ b/src/main/_data/docs.yml
@@ -35,7 +35,10 @@
   docs:
   - ws-admin-intro # Che workspace-administration
   - ide-projects # Che use-che-as-an-ide
-  - user-import   
+  - user-import
+  - user-teams
+  - user-subscriptions
+  - user-permissions
   - ide-git-svn # Che use-che-as-an-ide
   - ide-editor-settings # Che use-che-as-an-ide
   - ide-intellisense # Che use-che-as-an-ide
