Fixes for adding factories to codenvy docs
Signed-off-by: Stevan Le Meur <stevan.lemeur@gmail.com>

--- a/src/main/_data/docs.yml
+++ b/src/main/_data/docs.yml
@@ -52,10 +52,10 @@
   - user-sharing-permissions
 - title: Portable Workspaces
   docs:
-  - factory-getting-started
-  - factory-creating
-  - factory-json-reference
-  - factory-glossary
+  - factory-getting-started # Che factory-portable-workspace
+  - factory-creating # Che factory-portable-workspace
+  - factory-json-reference # Che factory-portable-workspace
+  - factory-glossary # Che factory-portable-workspace
 - title: Integration Guide
   docs:
   - integration-issue-management
