Refactor docs for Factory (#108)
* Updates to enable factory docs from Che on Codenvy docs

Signed-off-by: Stevan Le Meur <stevan.lemeur@gmail.com>

* Fixes for adding factories to codenvy docs

Signed-off-by: Stevan Le Meur <stevan.lemeur@gmail.com>

* remove glossary

Signed-off-by: Stevan Le Meur <stevan.lemeur@gmail.com>

--- a/src/main/_data/docs.yml
+++ b/src/main/_data/docs.yml
@@ -50,9 +50,13 @@
   - ide-sync # Che use-che-as-an-ide
   - ide-ssh # Che use-che-as-an-ide
   - user-sharing-permissions
+- title: Portable Workspaces
+  docs:
+  - factory-getting-started # Che factory-portable-workspace
+  - factory-creating # Che factory-portable-workspace
+  - factory-json-reference # Che factory-portable-workspace
 - title: Integration Guide
   docs:
-  - integration-workspace-automation
   - integration-issue-management
   - integration-continuous-integration
 - title: White Label Guide
