Setup organization page for codenvy onprem
Signed-off-by: Stevan Le Meur <stevan.lemeur@gmail.com>

--- a/src/main/_data/docs.yml
+++ b/src/main/_data/docs.yml
@@ -20,6 +20,7 @@
   - admin-configuration
   - admin-ldap
   - admin-managing
+  - admin-organizations
   - admin-cli
   - admin-runbook
 - title: Workspace Guide
