Update gitignore file with Intellij file patterns, remove iml file

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ test/
 .sass-cache/
 src/main/_docs/che
 src/main/_docs/assets/imgs/*.*
+
+# Idea #
+##################
+*.iml
+*.ipr
+*.iws
+.idea/
