--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     </parent>
     <groupId>com.codenvy.docs</groupId>
     <artifactId>codenvy-docs</artifactId>
-    <version>5.9.0</version>
+    <version>5.9.1-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>Codenvy :: Docs War</name>
     <scm>
@@ -33,7 +33,7 @@
         <tag>5.9.0</tag>
     </scm>
     <properties>
-        <che.docs.version>5.9.0</che.docs.version>
+        <che.docs.version>5.9.1</che.docs.version>
         <jetty.version>9.4.0.v20161208</jetty.version>
         <maven.releases.repo.url>https://maven.codenvycorp.com/content/repositories/codenvy-private-releases/</maven.releases.repo.url>
         <maven.snapshots.repo.url>https://maven.codenvycorp.com/content/repositories/codenvy-private-snapshots/</maven.snapshots.repo.url>
