--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-     2012-2017 Codenvy, S.A.
-     All Rights Reserved.
+    Copyright (c) 2012-2017 Red Hat, Inc.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
 
-    NOTICE:  All information contained herein is, and remains
-    the property of Codenvy S.A. and its suppliers,
-    if any.  The intellectual and technical concepts contained
-    herein are proprietary to Codenvy S.A.
-    and its suppliers and may be covered by U.S. and Foreign Patents,
-    patents in process, and are protected by trade secret or copyright law.
-    Dissemination of this information or reproduction of this material
-    is strictly forbidden unless prior written permission is obtained
-    from Codenvy S.A..
+    Contributors:
+      Red Hat, Inc. - initial API and implementation
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -35,12 +31,10 @@
     <properties>
         <che.docs.version>5.16.0-SNAPSHOT</che.docs.version>
         <jetty.version>9.4.0.v20161208</jetty.version>
+        <license_contributor>Red Hat, Inc. - initial API and implementation</license_contributor>
+        <license_copyrightOwner>Red Hat, Inc.</license_copyrightOwner>
         <maven.releases.repo.url>https://maven.codenvycorp.com/content/repositories/codenvy-private-releases/</maven.releases.repo.url>
         <maven.snapshots.repo.url>https://maven.codenvycorp.com/content/repositories/codenvy-private-snapshots/</maven.snapshots.repo.url>
-        <version.license-header>codenvy-codenvy-license-resource-bundle</version.license-header>
-        <version.license.header.artifactid>codenvy-codenvy-license-resource-bundle</version.license.header.artifactid>
-        <version.license.header.groupid>com.codenvy.resources</version.license.header.groupid>
-        <version.license.header.version>14</version.license.header.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -76,54 +70,54 @@
         </pluginRepository>
     </pluginRepositories>
     <build>
-        <plugins>      
+        <plugins>
             <plugin>
-            <artifactId>maven-resources-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>copy-resources</id>
-                <phase>validate</phase>
-                <goals>
-                  <goal>copy-resources</goal>
-                </goals>
-                <configuration>
-                  <outputDirectory>${project.build.directory}/codenvy-docs-src/src/main</outputDirectory>
-                  <resources>          
-                    <resource>
-                      <directory>${project.basedir}/src/main</directory>
-                      <filtering>false</filtering>
-                    </resource>
-                  </resources>              
-                </configuration>            
-              </execution>
-            </executions>
-          </plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/codenvy-docs-src/src/main</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${project.basedir}/src/main</directory>
+                                    <filtering>false</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
-             <groupId>org.apache.maven.plugins</groupId>
-             <artifactId>maven-dependency-plugin</artifactId>
-             <executions>
-               <execution>
-                 <id>unpack</id>
-                 <phase>process-resources</phase>
-                 <goals>
-                   <goal>unpack</goal>
-                 </goals>
-                 <configuration>
-                   <artifactItems>
-                     <artifactItem>
-                       <groupId>org.eclipse.che.docs</groupId>
-                       <artifactId>che-docs</artifactId>
-                       <version>${che.docs.version}</version>
-                       <classifier>sources</classifier>
-                       <type>jar</type>
-                       <overWrite>false</overWrite>
-                       <outputDirectory>${project.build.directory}/codenvy-docs-src</outputDirectory>
-                     </artifactItem>
-                   </artifactItems>
-                 </configuration>
-               </execution>
-             </executions>
-           </plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>unpack</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.eclipse.che.docs</groupId>
+                                    <artifactId>che-docs</artifactId>
+                                    <version>${che.docs.version}</version>
+                                    <classifier>sources</classifier>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${project.build.directory}/codenvy-docs-src</outputDirectory>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>com.mycila</groupId>
                 <artifactId>license-maven-plugin</artifactId>
