--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>maven-depmgt-pom</artifactId>
         <groupId>org.eclipse.che.depmgt</groupId>
-        <version>5.20.0-SNAPSHOT</version>
+        <version>5.20.0</version>
     </parent>
     <groupId>com.codenvy.docs</groupId>
     <artifactId>codenvy-docs</artifactId>
