--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <tag>HEAD</tag>
     </scm>
     <properties>
-        <che.docs.version>5.21.0-SNAPSHOT</che.docs.version>
+        <che.docs.version>5.21.0</che.docs.version>
         <jetty.version>9.4.0.v20161208</jetty.version>
         <license_contributor>Red Hat, Inc. - initial API and implementation</license_contributor>
         <license_copyrightOwner>Red Hat, Inc.</license_copyrightOwner>
